--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "axios": "^1.2.5",
     "dotenv": "^16.0.3",
-    "os": "^0.1.2"
+    "os": "^0.1.2",
+    "os-utils": "^0.0.14",
+    "systeminformation": "^5.17.4"
   }
 }
